--- a/pgpool/pgpool-secret.yaml
+++ b/pgpool/pgpool-secret.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pgpool-secrets
-data:
+stringData:
   admin-password: "password"
+  custom-user-passwords: "PXT8bh2dHO0V8Rse, N9oQOMp1otdWGvdc, prX4Jk0XSQjHPaDr, lyimRoKqSg7hHgc1, 6nWYRpRRi5jjOpRn, tJsAEYR0Igqyz6zt, WiSrt3gxNveG2er8, nP7h1I3v3BudTL2y, 1uv3yED3Us7E0flg, VAKhJYbkX05mbC0v, v7cr10jE9FwfsPbS, 5sLE9lGcyg3WV0h3, iNNudExZNtpOspnN, 3EhMhvn5WRjYOw84, Dw2OtjzSOKoZvrGN, ulurS8q1utgQ3jYR, R3o46n5QIBZ8yvAN, 9xIjPcBFb9tPqGeB, hh11IRZulzXFkPiU, EKvaUWzO0mHHdXuD, 5ZBBwc9GvESZLKhg, 2TauQZ1HXrmjm4CV, bWv8Eq8dxCwz5z55, WS3DdZJYh7ux739s, E84YDXF2l5P4FkFG, HmlN399SbtXN3Z90"
+
